# PHealthAssistant

./: .env.example  .gitignore  plan.md  pyproject.toml
data/patients/: P001.json  P002.json  P003.json
src/phealthassistant/: config.py  main.py
src/phealthassistant/api/: deps.py  exception_handlers.py
src/phealthassistant/api/routers/: admin.py  consultation.py  health.py  patients.py
src/phealthassistant/application/agent/: langgraph_service.py  multi_agent_service.py  service.py
src/phealthassistant/application/ingestion/: service.py
src/phealthassistant/application/ports/: llm.py  vector_store.py
src/phealthassistant/application/retrieval/: service.py
src/phealthassistant/domain/consultation/: models.py
src/phealthassistant/domain/patient/: exceptions.py  models.py
src/phealthassistant/infrastructure/data/: patient_loader.py
src/phealthassistant/infrastructure/llm/: gemini_client.py
src/phealthassistant/infrastructure/vector_store/: chroma_store.py
tests/application/agent/: test_langgraph_service.py  test_multi_agent_service.py
