[project]
name = "phealthassistant"
version = "0.1.0"
description = "Healthcare RAG AI Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-generativeai>=0.8.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-google-genai>=0.3.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
